--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -120,9 +120,21 @@
 
 
 %COEX
+\NewBibItem{coexAssembly}{Clover 4.2 assembly}
+\Online{https://clover.coex.tech/en/assemble\_4\_2.html}
+\Published{\NA}, \Requested{09.05.2022}
+
+\NewBibItem{coexConfig}{Initial setup}
+\Online{https://clover.coex.tech/en/setup.html}
+\Published{\NA}, \Requested{09.05.2022}
+
 \NewBibItem{coexExample}{MAVROS Offboard control example}
 \Online{https://docs.px4.io/master/en/ros/mavros\_offboard.html}
 \Published{\NA}, \Modified{02.02.2021}, \Requested{16.03.2022}
+
+
+
+
 
 
 
