edited Chapter Methodik

--- a/Ausarbeitung/211008_MM_T3100_Ergebnis Fluganalyse.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ergebnis Fluganalyse.tex
@@ -29,7 +29,7 @@ Aus den Flugversuchen zeigte sich, dass StatusID 6 (\textit{Taking off}) nicht g
 \vspace{0.25cm}
 \begin{center}
 \fbox{\includegraphics[width=15cm]{Pictures/TestFlight Status Flags Height.png}}
-\caption{Testflug: StatusID}
+\caption{Testflug: StatusID, Flags und Höhenprofil}
 \label{fig:FlightStatus}
 \end{center}
 
