--- a/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
@@ -104,12 +104,11 @@ Der LED-Streifen zählt nicht zu des essentiellen Bauteilen des \Quad. Der \Quad
 
 \newSec{Bus-System des RC Empfängers}{4}
 Der RC-Empfänger gibt die Funk-Signale über einen Bus an den \textit{Flight Controller} weiter. Hierbei ist zu berücksichtigen, dass der RC-Empfänger die beiden  Bus-Protokolle \textit{i-Bus} und \textit{s-Bus} versenden kann. Der Inhalt beider Protokolle ist identisch. Der Unterschied besteht in der Signal-Invertierung.\\
-\begin{table}[]
-\begin{tabular}{ll}
-RC-Sender:&\href{https://www.flysky-cn.com/i6-gaishu}{FS-i6}\\
-RC-Empfänger:&\href{https://www.flysky-cn.com/x8b-canshu}{FS-X8B}
-\end{tabular}
-\end{table}
+\begin{tabbing}
+\hspace{3.5cm} \= \kill
+RC-Sender:\>\href{https://www.flysky-cn.com/i6-gaishu}{FS-i6}\\
+RC-Empfänger:\>\href{https://www.flysky-cn.com/x8b-canshu}{FS-X8B}
+\end{tabbing}
 
 \texttt{Lösung}\\
 \textit{BIND}-Knopf beim Einschalten für etwa 3 Sekunden gedrückt halten. Der Bus-Mode wird hiermit umgeschalten.
