--- a/Ausarbeitung/211008_MM_T3100_Positionsregelung Accel.tex
+++ b/Ausarbeitung/211008_MM_T3100_Positionsregelung Accel.tex
@@ -44,7 +44,7 @@ In \refImgShort{fig:SzeneOrigin} sind der idealisiete Höhneverlauf (oben) und d
 Die Beschleunigungsdaten wurden aus der genannten Kurve mittel zweifacher zeitdiskreter Differentation gebildet (siehe \refImg{fig:SzeneOrigin}, unten).\\
 Durch dieses Vorgehen ist sichergestellt, dass ein Vergleich zwischen original Kurve und den rekonstruierten Verläufen gebildet werden kann. In diesem Zusammenhang wurde sichergestellt, dass eine Rekonstruktion ohne aufgeprägte Störgrößen möglich ist. \comp{SV1}(Seite 123)
 
-
+\FloatBarrier
 \newSec[ControlPosAccelNoise]{Rauschen}{4}
 Rauschen eines Signal kann durch die Quantisierung von analogen Daten auftreten \comp{SV1} (Seite 100, Abbildung 4.5) oder in dem Anwendungsfall einer Beschleunigungsmessung auch von Vibrationen des Systems beeinflusst werden.
 Es ist darauf zu achten, dass Überläufe von digitalen Speichertypen vermieden werden, da diese einen Signifikanten Anteil an rauschenden Signalen ausmachen können. \comp{SV1} (Seite 118)
@@ -69,7 +69,7 @@ Um das aufgeprägte Rauschen zu erzeugen wurden Zufallszahlen im Bereich [-1, 1]
 
 
 
-
+\FloatBarrier
 \newSec[ControlPosAccelOutlier]{Ausreißer}{4}
 
 \missing[Erklären, wie diese entstehen]
@@ -93,7 +93,7 @@ Die Höhe der aufgeprägten Ausreißer wurde mittel einer Datenreihe von Zufalls
 
 
 
-
+\FloatBarrier
 \newSec[ControlPosAccelOffset]{konstante Nullpunkt-Abweichung}{4}
 
 
