--- a/Ausarbeitung/211008_MM_T3100_Positionsregelung Pose.tex
+++ b/Ausarbeitung/211008_MM_T3100_Positionsregelung Pose.tex
@@ -7,3 +7,4 @@ Um ein Nachregeln des \Quad[s] bei einer Orientierungsänderung in der Horizonta
 Es ist zu beachten, dass sie Parallelität des \Quad-Koordinatensystem zum lokalen \bzw\ globalen Koordinatensystem bei einer rotation um die z-Achse verloren geht. Hierzu ist die translative Bewegung entgegengesetzt dieser Rotation zu transformieren. Somit kann die Position bezogen auf das lokale \bzw\ globale Koordinatensystem ermittelt werden. \missing[Quelle? evtl Vorlesung?]
 
 
+\missing[Auswahl, welcher Regler: PID begründen.]
