edited SubSubChapter Pose and added RQT-Graph to parrot

--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -31,8 +31,18 @@ Als \ROS-seitige Schnittstelle werden verschiedene \Topic[s] und \Service[s] ang
 
 
 
+\begin{figure}[ht!]
+\vspace{0.25cm}
+\begin{center}
+\fbox{\includegraphics[width=8cm]{Pictures/RQT DroneOnly.png}}
+\caption{rqt-Graph der \Ar}
+\label{fig:rqtRaw}
+\end{center}
 
-\missing[Bild von rqt-graph]
+\vspace{0.25cm}
+\end{figure}
+
+\missing[evtl den vollständigen Graph. Aber darauf sieht man nichts :D]
 
 
 
