--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -43,16 +43,18 @@
 \ISBN{0-201-07616-0}
 
 
-
-
-
-
-
-
-
 % Normen
 \NewBibItem{IEC60050-351}{Internationales Elektrotechnisches Wörterbuch – Teil 351: Leittechnik (IEC 60050-351:2006)}
 \Published{06/2009}
+
+
+
+%Vorlesungen
+\NewBibItem{VLRobo2-8}{Prof. Dr. Strand M., Vorlesung Robotik 2, Einheit 8 - Positionsschätzung, DHBW Karlsruhe, Kurs TINF19B1}
+\Published{27.04.2022}
+
+\NewBibItem{VLRobo2-5}{Richter M., Vorlesung Robotik 2, Einheit 5, DHBW Karlsruhe, Kurs TINF19B1}
+\Published{13.03.2014}, \Modified{22.03.2022}
 
 
 % Einleitung
