--- a/Ausarbeitung/211008_MM_T3100_Implementierung - Domain.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - Domain.tex
@@ -48,7 +48,7 @@ Instanzen der \CodeClass{SafetRequirement} werden an einen \textit{SafetyProvide
 Die \textit{full virtual} \CodeClass{SafetReceiver} fordert die Implementierung der \CodeMeth{safetyTriggered}. Hierin definiert die erbende Klasse, wie in Folge einer Verletzung der Sicherheitsanforderungen reagiert werden soll. Allgemein ist hierfür eine Landung des \Quad[s] vorgesehen.
 
 
-\newSec{SafetRequirementy}{4}
+\newSec{SafetRequirement}{4}
 Im Sinne des \textit{Open/Close-Principle} wird die \CodeClass{SafetRequirementy} als virtuelle Klasse eingeführt. Hierdurch werden Eigenschaften und Status \bzw\ Flags des \Quad[s] für Sicherheitsfunktionalitäten zugänglich gemacht.
 
 
