--- a/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
@@ -4,11 +4,19 @@ Dieses Kapitel beschreibt die Klassen, welche zur Interaktion mit der zuerst ein
 
 
 \note{Die Implementierung dieses \Pack[s] wurde vor der konzeptionellen Änderung des \textit{Application-Layers} umgesetzt.
-Die Beschreibung der Klassen dieses Paketes dient der Einarbeitung nachfolgender Studienarbeiten. Auf Grund der Änderungen im Code kann dieses \Pack\ nicht Kompiliert werden.}
+Die Beschreibung der Klassen dieses Paketes dient der Einarbeitung nachfolgender Studienarbeiten. Auf Grund der Änderungen im Code kann dieses \Pack\ nicht Kompiliert werden. \refImg{fig:PackCoex} soll eine Portierung des Programms auf den \Quad\ \Clover\ unterstützen.}
 
-\missing[Hier evtl den Abhängigkeitsgraph für coex zur Veranschaulichung?]
+\begin{figure}[ht!]
+\vspace{0.25cm}
+\begin{center}
+\fbox{\includegraphics[width=15cm]{Pictures/Clean Architecture coex.png}}
+\caption{Klassendiagramm des \textit{coex} \Pack[s]}
+\label{fig:PackCoex}
+\end{center}
 
-
+\vspace{0.25cm}
+Zur Veranschaulichung der Abhängigkeiten dieses Pakets soll \refImgShort{fig:PackCoex} dienen.
+\end{figure}
 
 
 \newSec{coexBattery}{4}
