edited Chapter Einleitung

--- a/Ausarbeitung/211008_MM_T3100_Einleitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Einleitung.tex
@@ -10,26 +10,13 @@ aus dem Lied \textit{Über den Wolken} von Reinhard Mey, 1973 \cite{Einl1}
 \vspace{1cm}
 
 
+Schon lange sehnten sich Menschen danach, fliegen zu können. Eine der bekanntesten Geschichten ist die Mythologie über Ikarus, der auf der Flucht aus dem Labyrinth auf der Insel Kreta mit selbstgebauten Flügeln der Sonne zu nahe kam und daraufhin ins Meer stürzte. \comp{Einl2}\\
+Leonardo da Vinci deutete Ende des 15. Jahrhunderts in den \textit{Pariser Manuskripten} die Funktionsweise eines Helikopters \bzw\ einer Luftschraube an. \comp{Einl3}
 
+Diverse Paket-Lieferdienste planen, \Quad\ in Ballungsgebieten zum Versand von Paketen einzusetzen. \comp{Einl4}
 
-
-
-Menschen sehnten sich seit jeher, fliegen zu können.
-\missing[irgendwas mit Ikarus]
-
-
-\missing[Erste motorisierte Flüge - 1903 Gebrüder Wright]
-
-
-
-
-Dronen als zukünfiges Verfehkrsmittel für kurzstreckentransporte
-
-Dronen auf dem Mars, Ingenuity Feb 2021
-
-
-
-
+Zur Wegplanung ist eine korrekt berechnete Pose (Position und Orientierung) des \Quad[s] notwendig. Hierzu können diverse Sensoren eingesetzt werden, welche an den Fuggeräten eingesetzt werden.\\
+In dieser \Arbeit\ wurden Initialsensoren als mögliche Herangehensweise ausgewählt. Als Grundlage für die Auswahl kann die einfache Aufarbeitung der Daten genannt werden. Zudem wurden bereits erfolgreich Projekte mit diesem Konzept umgesetzt. \compB{Paper3}{Paper4}
 
 
 
