--- a/Ausarbeitung/211008_MM_T3100_Ergebnis Auswertung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ergebnis Auswertung.tex
@@ -22,7 +22,7 @@ Im Zuge dieser \Arbeit\ konnte keine Begründung für die in \refImg{fig:FlightP
 
 
 
-
+\missing[Etwas zum Thema ungeeignete Initialsensoren. Ungenau oder so...]
 
 
 
