--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -26,6 +26,16 @@
 \NewBibItem{Paper2}{Fresk E., Nikolakopoulos G., Full Quaternion Based Attitude Control for a Quadrotor}
 \Published{19.07.2013}
 
+\NewBibItem{Paper3}{Morton L., Baille L., Ramirez-Iniguez R., Pose Calibrations for Inertial Sensors in Rehabilitation Applications}
+\Published{2013}
+
+\NewBibItem{Paper4}{Yang Z., et al., Hand-Finger Pose Estimation Using Inertial Sensors, Magnetic Sensors and a Magnet}
+\Published{2021}
+
+
+
+
+
 
 
 % Bücher
@@ -41,6 +51,12 @@
 \NewBibItem{DataAnalysis1}{Tukey J., Exploratory Data Analysis}
 \Published{1977}
 \ISBN{0-201-07616-0}
+
+\NewBibItem{Einl3}{Leishmann  G., Principles of Helicopter Aerodynamics}
+\Published{2006}
+\ISBN{0-521-85860-7}
+
+
 
 
 % Normen
@@ -61,6 +77,22 @@
 \NewBibItem{Einl1}{Mey R., Reinhard Mey Textsammlung 14.Auflage}
 \Online{https://www.reinhard-mey.de/texte-fuer-alle/}
 \Published{13.12.2017}, \Requested{08.02.2022}
+
+\NewBibItem{Einl2}{Ikarus}
+\Online{https://griechische-mythologie.fandom.com/wiki/Ikarus}
+\Published{\NA}, \Requested{11.05.2022}
+
+\NewBibItem{Einl4}{Frauenhofer IML, ZF-ZUKUNFTSSTUDIE 2016 - Die letzte Meile}
+\Online{https://publica-rest.fraunhofer.de/server/api/core/bitstreams/6e295b15-7a64-4e19-8895-30f7c650307e/content}
+\Published{24.11.2016}, \Modified{19.12.2016}, \Requested{11.05.2022}
+
+
+
+
+
+
+
+
 
 
 
