--- a/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
@@ -45,6 +45,7 @@ Es war geplant, die Pose des \Quad[s] in dieser Klasse berechnen zu lassen. Im w
 Die \CodeClass{coexRC} ist als Fassade für die beiden nachfolgenden implementiert.
 
 
+\FloatBarrier
 \newSec[coexRCR]{coexRC\_Receiver}{4}
 Die \CodeClass{coexRC\_Receiver} liest vom \rTopic{/mavros/rc/in} und somit die Eingaben der Funkfernsteuerung. Eine nähere Erläuterung, welche Daten übermittelt werden, findet sich als Kommentar im Code.
 
